# cpp2ls

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: document.cpp  document.h  index.cpp  index.h  main.cpp  server.cpp  server.h
tests/fixtures/: member-completion-README.md  member-completion-syntax-error-test.cpp2  member-completion-test.cpp2
tests/fixtures/include-test/: README.md  advanced.h2  main.cpp2  types.h2  utils.h2
